# sottocampiona

./: CMakeLists.txt
src/: freenect_grabber.hpp  harris.cpp
